--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ ul li a {
     display: flex;
     flex-direction: row;
     flex: 1;
+    padding-right: 5%;
 }
 
 .left {
@@ -73,9 +74,16 @@ ul li a {
     height: 40px;
     background-color: rgb(136, 152, 234);
     color: white;
-    border: none;
+    border: rgb(136, 152, 234) solid 2px;
     border-radius: 5px;
     display: flex
+}
+
+.under button:hover {
+    background-color: transparent;
+    color: rgb(136, 152, 234);
+    border: 2px solid rgb(136, 152, 234);
+    transition: .3s ease-in-out;
 }
 
 .right {
@@ -184,16 +192,155 @@ body {
     gap: 5%;
 }
 
-.avatar img {
-    width: 20%;
-    height: 90%;
-    border-radius: 50%;
+.avatar img {             /* Fill the parent container */
+    width: 60px;
+    aspect-ratio: 1 / 1;        /* Maintains a square */
+    border-radius: 50%;         /* Makes it a circle */
+    object-fit: cover;          /* Keeps image inside circle */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
-
 .desc {
     display: flex;
     flex-direction: column;
     gap: 2%;
     font-size: .7em;
+}
+
+.early-access {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(87, 89, 133);
+}
+
+.part1 {
+    padding: 5%;
+    flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 50px;
+}
+
+.part1 h1 {
+    font-size: 1.8em;
+    color: white;
+}
+
+.part1 p {
+    width: 80%;
+    color: white;
+}
+
+.part2 {
+    flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.last-form {
+    display: flex;
+    flex-direction: row;
+    gap: 2%;
+    padding: 5%;
+}
+
+.last-form input {
+    flex: 1;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid black;
+    width: 400px;
+    height: 40px;
+    border-radius: 5px;
+}
+
+.last-form button {
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
+    height: 40px;
+    background-color: rgb(136, 152, 234);
+    color: white;
+    border: 2px solid rgb(136, 152, 234);
+    border-radius: 5px;
+}
+
+.last-form button:hover {
+    background-color: transparent;
+    color: white;
+    border: 2px solid white;
+    transition: .3s ease-in-out;
+}
+
+footer {
+    width: 100%;
+    height: 100vh;
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.stuff {
+    margin-top: 5%;
+    display: flex;
+    flex-direction: row;
+    gap:5%;
+    list-style-type: none;
+}
+
+.f1 {
+    flex-basis: 25%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.f1 a {
+    text-decoration: underline;
+    color: black;
+}
+
+.f2 {
+    flex-basis: 25%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.f2 a {
+    text-decoration: none;
+    color: black;
+}
+
+.f3 {
+    flex-basis: 25%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.f3 a {
+    text-decoration: none;
+    color: black;
+}
+
+.f4 {
+    display: flex;
+    flex-direction: row;
+}
+
+.f4 svg {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+    border: 2px solid black;
+    border-radius: 50%;
+    padding: 5px;
 }
